--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "java.project.sourcePaths": [
     "employee-management-service/src/main/java",
-    "notification-service/src/main/java"
-  ]
+    "notification-service/src/main/java",
+    "activity-service/src/main/java"
+  ],
+  "java.configuration.updateBuildConfiguration": "interactive"
 } 
