feat: add healthcheck endpoints and update docker-compose configuration
- Implemented healthcheck endpoints for activity, notification, and employee management services to monitor service health.
- Updated docker-compose.yml to include healthcheck configurations for each service.
- Enhanced README to document the new healthcheck endpoints and usage instructions.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "notification-service/src/main/java",
     "activity-service/src/main/java"
   ],
-  "java.configuration.updateBuildConfiguration": "interactive"
+  "java.configuration.updateBuildConfiguration": "interactive",
+  "java.compile.nullAnalysis.mode": "automatic"
 } 
